--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ecosystem Simulator</title>
+    <title>Bugy Bot</title>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
